--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 python = "^3.11"
 micropython-rp2-stubs = "*"
 micropython-esp32-stubs = "*"
+circup = "^1.5.2"
 
 
 [build-system]
