--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.11"
 micropython-rp2-stubs = "*"
 micropython-esp32-stubs = "*"
 circup = "^1.5.2"
+types-circuitpython = "^8.1.0"
 
 
 [build-system]
