--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,14 +4,15 @@ repos:
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
+
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: "v3.1.0" # Use the sha or tag you want to point at
+    rev: "v4.0.0-alpha.8" # Use the sha or tag you want to point at
     hooks:
       - id: prettier
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
     # Ruff version.
-    rev: v0.1.6
+    rev: v0.1.9
     hooks:
       # Run the linter.
       - id: ruff
