DevBox and CircuitPython as recommended extensions

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,8 @@
     "paulober.pico-w-go",
     "ms-python.python",
     "visualstudioexptteam.vscodeintellicode",
-    "ms-python.vscode-pylance"
+    "ms-python.vscode-pylance",
+    "jetpack-io.devbox",
+    "joedevivo.vscode-circuitpython"
   ]
 }
