--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,14 @@
   "python.languageServer": "Pylance",
   "python.analysis.typeCheckingMode": "basic",
   "python.analysis.typeshedPaths": [".vscode/Pico-W-Stub"],
-  "python.analysis.extraPaths": [".vscode/Pico-W-Stub"],
+  "python.analysis.extraPaths": [
+    "/home/manolo/.vscode/extensions/joedevivo.vscode-circuitpython-0.1.20-linux-x64/boards/0x239A/0x80F4",
+    "/home/manolo/.vscode/extensions/joedevivo.vscode-circuitpython-0.1.20-linux-x64/stubs",
+    "/home/manolo/.config/Code/User/globalStorage/joedevivo.vscode-circuitpython/bundle/20231228/adafruit-circuitpython-bundle-py-20231228/lib"
+  ],
   "micropico.syncFolder": "",
-  "micropico.openOnStart": true
+  "micropico.openOnStart": true,
+  "circuitpython.board.version": null,
+  "circuitpython.board.vid": "0x239A",
+  "circuitpython.board.pid": "0x80F4"
 }
